# ESG-Decarbonization-Data-integration-and-Data-pipline

./: Dockerfile  README.md  clean_up.py  main.py  pyproject.toml  training.py  wsgi.py
Model/: Factory_elect_simulator.py  Factory_elect_simulator_ori.py  Factory_elect_simulator_update.py  Factory_elect_simulator_update_v1.py  Factory_elect_simulator_update_v2.py  RE_purpose_optimizer.py
app/: __init__.py  blueprint.py  celery.py  extensions.py  models.py
app/certificate/: blueprint.py
app/electricity/: blueprint.py  shipment.py  summary.py
app/green_power/: blueprint.py  reconciliation.py
app/notification/: blueprint.py
app/renewable_energy/: blueprint.py  sim.py
app/sign_off/: blueprint.py  constant.py
app/solar/: blueprint.py  remaining_power.py
app/task/: blueprint.py
exceptions/: ReconciliationException.py  ShipmentException.py
factories/: SourceToRawFactoryException.py  source_to_raw_factory.py
helpers/: decarb_date.py
jobs/: csr_etl.py  decarb_path_etl.py  elect_target_etl.py  example.py  fix_data.py  green_energy_etl.py  raw_to_staging.py  renew_green_energy.py  renew_setting_etl.py  shipments_etl.py  solar_etl.py  source_to_raw.py  staging_cal.py  staging_to_app.py  task_names.py  wzsesgi_etl.py
jobs/source_to_raw/: fem_ratio.py  fem_ratio_solar.py  solar.py  solar_ratio.py
macc_summary/: macc_input_to_summary.py
models/: engine.py
services/: mail_service.py
tests/: helpers_decarb_date_test.py  jobs_source_to_raw_test.py
utils/: constants.py  indicator_queue.py  response.py
